# ecs

./: CMakeLists.txt  README.md
include/ecs/: all.hpp  component.hpp  engine.hpp  entity.hpp  frame_timer.hpp  named.hpp  scene.hpp  system.hpp
include/ecs/core/: component.hpp  component_check.hpp  engine.hpp  entity.hpp  scene.hpp  system.hpp
include/ecs/utility/: frame_timer.hpp  registry.hpp  resource.hpp
tests/: engine_test.cpp
